Feature: Turso database integration - modern SQLite-based database

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 # Demo Mode - Set to true to use mock data instead of real database
 DEMO_MODE=true
 
-# Supabase (not needed if DEMO_MODE=true)
+# Turso Database (Modern SQLite-based database)
+# Get these from: https://turso.tech/
+TURSO_DATABASE_URL=libsql://your-database.turso.io
+TURSO_AUTH_TOKEN=your-turso-auth-token
+
+# Supabase (alternative to Turso, not needed if using Turso)
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 SUPABASE_SERVICE_KEY=your-supabase-service-key
